# rust_weather_app

./: Cargo.toml  README.md
src/: json_writer.rs  lib.rs  main.rs  weather_request.rs
