[package]
name = "weather_forecasting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = "0.12.4"
tokio = {version = "1.38.0", features = ["full"]}
eframe = "0.14.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"